--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
     "@fontsource/inter": "^5.0.16",
+    "@uiw/codemirror-theme-vscode": "^4.23.12",
+    "@uiw/react-codemirror": "^4.23.12",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-codemirror2": "^8.0.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-split": "^2.0.14",
+    "split.js": "^1.6.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
