--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-cpp": "^6.0.2",
+    "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-python": "^6.2.1",
     "@fontsource/inter": "^5.0.16",
     "@uiw/codemirror-theme-vscode": "^4.23.12",
     "@uiw/react-codemirror": "^4.23.12",
@@ -18,6 +21,7 @@
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "react-split": "^2.0.14",
     "split.js": "^1.6.5"
