--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@fontsource/inter": "^5.0.16",
     "@uiw/codemirror-theme-vscode": "^4.23.12",
     "@uiw/react-codemirror": "^4.23.12",
+    "axios": "^1.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.1",
