--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "react-split": "^2.0.14",
-    "split.js": "^1.6.5"
+    "split.js": "^1.6.5",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
