--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@uiw/codemirror-theme-vscode": "^4.23.12",
     "@uiw/react-codemirror": "^4.23.12",
     "axios": "^1.10.0",
+    "framer-motion": "^12.18.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-codemirror2": "^8.0.1",
